# sfgraph

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  biome.json  docker-compose.test.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
.changeset/: phase-5.md  v1.0.0.md
.github/workflows/: ci.yml  publish.yml  quality-gate.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
apps/sfgraph/: package.json
config/: dynamic_accessors.yaml
docs/: ARCHITECTURE.md  ARCHITECTURE_UPGRADE_PLAN.md  ARCHITECTURE_V2_IMPLEMENTATION.md  CLI.md  COVERAGE.md  DATA_LOCATIONS.md  DESIGN.md  DEVELOPMENT.md  IDE_SETUP.md  MIGRATING_FROM_PYTHON.md  ONLINE_DATASET_BENCHMARK.md  PLAN.md  PRIVACY.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SAMPLES.md  SCOPE_MIGRATION_RUNBOOK.md  SKILLS.md  TOOLS.md  TROUBLESHOOTING.md  WEB.md  acceptance_quality_gate_suite.json  acceptance_question_suite.json  acceptance_question_suite_expanded.json
extensions/vscode-sfgraph/: README.md  extension.js  package.json
legacy/: THIRD_PARTY_NOTICES.md  package.json
legacy/config/: graph_rules.yaml
legacy/tests/: test_benchmark_synthetic.py  test_duckpgq_store.py  test_graph_store_protocol.py  test_manifest_store.py  test_mcp_selftest.py  test_server_path_guard.py  test_server_tools.py  test_vector_store.py
scripts/: assert-pnpm-publish.mjs  preflight-publish.mjs  refresh-vendored-model.ts  refresh-vlocity-registry.ts
src/sfgraph/: cli.py  common.py  daemon.py  daemon_client.py  daemon_service.py  mcp_selftest.py  server.py
tests/: conftest.py  test_cli.py  test_daemon_client.py  test_daemon_service.py  test_duckpgq_store.py  test_falkordb_live.py  test_falkordb_store.py  test_graph_store_protocol.py  test_manifest_store.py  test_online_dataset_quality.py  test_parse_cache.py  test_server_tools.py  test_stdout_discipline.py  test_vector_store.py
tests/ingestion/: test_constants.py  test_ingestion_service.py  test_job_manager.py  test_org_metadata.py  test_parser_dispatch.py  test_snapshot.py
tests/parser/: test_apex_extractor.py  test_aura_parser.py  test_dispatcher.py  test_flow_parser.py  test_lwc_parser.py  test_metadata_parser.py  (+6 more)
(+92 files in other folders)
