[project]
name = "sfgraph"
version = "0.1.0"
description = "Salesforce Org Graph Analyzer — static analysis via property graph"
requires-python = ">=3.12"
dependencies = [
    "qdrant-client==1.17.1",
    "fastembed==0.8.0",
    "aiosqlite==0.22.1",
    "pydantic>=2.0,<3.0",
    "mcp[cli]==1.27.0",
    "falkordb>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<0.25",
    "pytest-cov>=5.0,<6.0",
]

[project.scripts]
sfgraph = "sfgraph.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sfgraph"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=sfgraph --cov-report=term-missing"

[tool.coverage.run]
source = ["src/sfgraph"]
omit = ["tests/*"]
